<resources>
    <string name="app_name">Atlas II</string>

    <!-- Application tabs -->
    <string name="tab_today">Today</string>
    <string name="tab_history">History</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_help">Help</string>
    <string name="tab_info">Info</string>

    <string name="action_settings">Settings</string>
    <string name="action_submit">Submit</string>
    <string name="action_upload">Upload</string>
    <string name="action_label">Save</string>
    <string name="general_ok_button">OK</string>
    <string name="section_format"></string>
    <string name="title_activity_login">Register</string>
    <string name="shared_preferences">Atlas_Prefs</string>

    <!-- History tab strings -->
    <string name="history_labelled_label">Labelled trips</string>
    <string name="history_upload_button">Upload labelled trips</string>
    <string name="history_unlabelled_label">Unlabelled trips</string>
    <string name="history_unlabelled_help">Please label these trips:</string>

    <!-- Profile tab strings -->
    <string name="profile_participant_label">PARTICIPANT DETAILS:</string>
    <string name="profile_participant_username">Username:</string>
    <string name="profile_participant_email">Email:</string>
    <string name="profile_survey_label">Post Travel Day Survey:</string>
    <string name="profile_survey_button">Take Survey</string>

    <!-- Info tab strings -->
    <string name="info_app_name">ATLAS II QLD Version</string>
    <string name="info_copyright">Copyright 2012 -</string>
    <string name="info_university">University of Queensland, All rights reserved.</string>
    <string name="info_more_info">For more information please visit:</string>

    <!-- App messages -->
    <string name="msg_history_no_labelled_trips">No Labelled Trips</string>
    <string name="msg_history_no_labelled_trips_details">There are no labelled trips to upload.</string>
    <string name="msg_tripview_purpose_required">Trip purpose required</string>
    <string name="msg_tripview_purpose_required_details">Please specify the reason for this trip.</string>
    <string name="msg_tripview_mode_required">Trip mode(s) required</string>
    <string name="msg_tripview_mode_required_details">Please specify the travel modes for this trip.</string>

    <!-- Strings related to intent messages -->
    <string name="intent_msg_trips_exported">Trips_Exported</string>
    <string name="intent_msg_trips_labelled">Trips_Labelled</string>
    <string name="intent_msg_trips_date">Trips_Date</string>
    <string name="intent_msg_trip_id">Trip_ID</string>

    <!-- Strings related to network addresses -->
    <!--string name="atlas_server_url">atlaservt.somee.com</string-->
    <string name="atlas_server_url">gpem-appsrv01.soe.uq.edu.au</string>
    <string name="atlas_help_url">http://gpem-appsrv01.soe.uq.edu.au/atlasmobileandroid/index.html</string>
    <string name="path_signin">Login.aspx</string>
    <string name="path_register">RegisterWithUsername.aspx</string>
    <string name="path_submit_survey_data">SubmitSurveyData.aspx</string>
    <string name="path_submit_trip_data">SubmitTripData.aspx</string>
    <string name="path_push_request">Push.aspx</string>
    <string name="path_active_surveys">GetActiveSurveys.aspx</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username (no spaces)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <!--string name="error_invalid_email">This email address is invalid</string-->
    <!--string name="error_invalid_password">This password is too short</string-->
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_invalid">Invalid username specified</string>
    <string name="error_email_invalid">Incorrect email specified</string>
    <string name="error_wrong_password">Passwords do not match</string>
    <string name="title_activity_survey_list">Select a Survey</string>
    <string name="title_activity_survey">Post Travel Day Survey</string>
    <string name="title_activity_test">Test Activity</string>
    <string name="title_activity_trips">Trips</string>
    <string name="title_activity_trip_view">Trip Details</string>
    <string name="title_activity_demographics_survey">Demographics Survey</string>

    <!-- Strings related to trips -->
    <string name="activity_trips_unlabelled">My Unlabelled Trip(s) on</string>
    <string name="activity_trips_labelled">My Labelled Trip(s) on</string>

    <!-- Strings related to trip view -->
    <string name="activity_tripview_label">Trip on</string>
    <string name="activity_tripview_purpose_question">What was the main reason you took this trip?</string>
    <string name="activity_tripview_mode_question">How did you travel?</string>
    <string name="activity_tripview_change_button">Tap for change</string>
    <string name="activity_tripview_origin_label">Origin</string>
    <string name="activity_tripview_destination_label">Destination</string>

    <!--string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string-->

    <!--  Strings related to demographics survey questions -->
    <string name="str_demographics_q1">What is your gender?</string>
    <string name="str_demographics_q2">What is your marital status?</string>
    <string name="str_demographics_q3">Where are you from?</string>
    <string name="str_demographics_q4">What is your highest degree?</string>
    <string name="str_demographics_q5">What is your year of birth?</string>
    <string name="str_demographics_q6">Which of the following best describes your current employment status?</string>
    <string name="str_demographics_q7">Do you own or have regular access to a motor vehicle?</string>
    <string name="str_demographics_q8">Do you own a public transportation payment card?</string>
    <string name="str_demographics_q9">Do you own or have regular access to an adult bicycle?</string>
    <string name="str_demographics_q10">Do you have a driver`s licence?</string>
    <string name="str_demographics_q11">Do you currently require any help or assistance travelling around due to a disability or illness?</string>
    <string name="str_demographics_q12">Are you a student?</string>
    <!--  Strings related to demographics survey responses -->
    <string name="lic_no">No Licence</string>
    <string name="lic_car">Car Licence</string>
    <string name="lic_motor">Motorcycle Licence</string>
    <string name="lic_other">Other Licence</string>
    <string-array name="array_gender">
        <item>Please select one</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="array_campus">
        <item>Please select one</item>
        <item>Single</item>
        <item>Married</item>
        <item>Other</item>
    </string-array>
    <string-array name="array_study">
        <item>Please select one</item>
        <item>Tehran</item>
        <item>Other cities in Iran</item>
        <item>Other countries</item>
    </string-array>
    <string-array name="array_locale">
        <item>Please select one</item>
        <item>Primary certificate</item>
        <item>Secondary certificate (diploma)</item>
        <item>Bachelor`s degree</item>
        <item>Master`s degree</item>
        <item>PhD or higher</item>
    </string-array>
    <string-array name="array_licence">
        <item>Please select one</item>
        <item>Open licence</item>
        <item>P2 provisional licence (Green)</item>
        <item>P1 provisional licence (Red)</item>
        <item>Learner`s permit</item>
    </string-array>
    <string-array name="array_employment_status">
        <item>Please select one</item>
        <item>37 hours or more in a typical week (full time)</item>
        <item>LESS than 37 hours in a typical week</item>
        <item>Not employed, looking for a job</item>
        <item>Experiencing a long-term health condition or disability</item>
        <item>Experiencing a short-term illness or injury</item>
        <item>Not employed, no health problem, not looking for a job (e.g., a full time student or retired)</item>
    </string-array>
    <string-array name="array_yesno">
        <item>Please select ...</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="array_dis_agreement">
        <item>Please select ...</item>
        <item>Strongly agree</item>
        <item>Agree</item>
        <item>Neither agree or disagree</item>
        <item>Disagree</item>
        <item>Strongly disagree</item>
    </string-array>
    <string-array name="array_day_start">
        <item>Please select ...</item>
        <item>Yes, a primary/secondary student</item>
        <item>Yes, an undergraduate student</item>
        <item>Yes, a Master`s student</item>
        <item>Yes, a PhD student</item>
        <item>No</item>
    </string-array>

    <!-- Strings related to trip labeling -->
    <string name="pick_modes">Select mode(s)</string>
    <string-array name="array_trip_purpose">
        <item>Please choose one</item>
        <item>Get on/off public transport</item>
        <item>Refuel my vehicle</item>
        <item>Work (my workplace)</item>
        <item>Work (other work reason)</item>
        <item>Education</item>
        <item>Social visit</item>
        <item>Recreation/leisure activity</item>
        <item>Eat/drink</item>
        <item>Shopping</item>
        <item>Personal business</item>
        <item>Pickup/deliver something (not work-related)</item>
        <item>Transporting (a) passenger(s)</item>
        <item>Park/pick-up a vehicle</item>
        <item>Just accompanying someone</item>
        <item>Go home</item>
        <item>Fake trip</item>
        <item>Other reason</item>
    </string-array>
    <string-array name="array_trip_modes">
        <item>Walking</item>
        <item>Bicycle</item>
        <item>Train</item>
        <item>Light rail</item>
        <item>School bus</item>
        <item>Public bus</item>
        <item>Ferry</item>
        <item>Charter/Courtesy/Other bus</item>
        <item>Car/Passenger vehicle</item>
        <item>Motorcycle/Scooter</item>
        <item>Goods van/Truck</item>
        <item>Taxi/Ride share e.g. Uber</item>
        <item>Mobility Scooter</item>
        <item>Fake trip</item>
        <item>Other method</item>
    </string-array>
</resources>
