<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="au.edu.uq.civil.atlasii.AtlasII"
    tools:showIn="@layout/atlas_profile_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin_ex"
    android:paddingLeft="@dimen/activity_horizontal_margin_ex"
    android:paddingRight="@dimen/activity_horizontal_margin_ex"
    android:paddingTop="@dimen/activity_vertical_margin_ex"
    android:scrollbars="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Participant Details -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profile_participant_label" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textview_profile_username"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profile_participant_username" />

        <TextView
            android:id="@+id/textview_profile_email"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profile_participant_email" />

        <!--Button
            android:id="@+id/button_reset_password"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Reset Password" /-->

        <!--Button
            android:id="@+id/button_logout"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Logout" /-->

        <!-- Surveys -->
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profile_survey_label" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/button_surveys"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_survey_button" />
    </LinearLayout>
</ScrollView>